# fanyi-v2

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
apps/electron-app/: electron-builder.json5
apps/electron-app/electron/: main.ts
apps/fanyi/: .eslintrc.cjs  .prettierignore  .prettierrc.cjs  components.json  electron-builder.json5  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts
apps/fanyi/src/main/: electron-env.d.ts  example.ts  ipc.ts  main.ts  preload.ts
apps/fanyi/src/main/services/: dictionary.ts  keybinds.ts  ocr.ts  preferences.ts  presets.ts  screenshot.ts
apps/fanyi/src/main/utils/: prefixed-stream.ts  styles.ts
apps/fanyi/src/renderer/: App.tsx  index.css  main.tsx
apps/fanyi/src/renderer/components/: OcrStatus.tsx  Sidebar.tsx  SidebarHeader.tsx  Titlebar.tsx
apps/fanyi/src/renderer/components/ui/: Button.tsx  ContextMenu.tsx  Dialog.tsx  HoverCard.tsx  Input.tsx  Label.tsx  RadioGroup.tsx  Select.tsx  (+5 more)
apps/fanyi/src/renderer/hooks/: useDarkMode.hook.tsx  usePasteImageReceiver.hook.tsx  usePresetKeybindReceiver.hook.tsx
apps/fanyi/src/renderer/stores/: usePresetStore.ts  useSidebarStore.ts  useTabStore.ts
apps/fanyi/src/renderer/utils/: image.util.ts
apps/fanyi/src/shared/queries/: getAppVersion.query.ts  getOcrStatus.query.ts  getUserPreferences.query.ts  openExternalLink.mutation.ts
apps/fanyi/src/shared/types/: dictionary.ts  ocr.ts  preferences.ts  screenshot.ts
apps/python-ocr/: .gitignore  README.md  fanyi_ocr.py  package.json  pyproject.toml
(+32 files in other folders)
