[project]
name = "python-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "jieba>=0.42.1",
    "pillow>=11.3.0",
    "ruff>=0.12.8",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
